# chase-car-dashboard

./: .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  README.md  convertTZstamp.ps1  docker-compose.yml  dockerV.sh  dump.rdb  graph-data1.json  linux-pull-run.sh  package-lock.json  package.json  render.yaml  run_dashboard.sh  vercel.json  versioning.md  windows-pull-run.bat
Backend/: .gitignore  config.py  main.py  note  package-lock.json  package.json  pyproject.toml  server.js  setup.py
Backend/Data/: cache_data.json  dataFormat.json  dynamic_data.json  session_data.json
Backend/chase_car_dashboard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Backend/components/: component_router.py  driving_stats.py  forcast.py  forecast.py  graph_api.py  maps_api.py  power_status.py  record_data.py
Backend/core/: comms.py  core_api.py  db.py  pyproject.toml
Backend/core/data_sources/: __init__.py  base.py  convex_source.py  manager.py  serial_source.py  supabase_source.py  udp_source.py
Backend/framework/: process.py  router.py
Backend/recordedData/: data.csv  runName.csv
Backend/recordedData/processedData/: README.md
Backend/recordedData/sessions/: README.md  demo1
Backend/routes/: api.js  data.js
Backend/src/: constants.json  server.js
Backend/src/routes/: api.js  args  demofile2.txt  exp_new_script1.py  modified_args  new_script1.py  process_recorded_data.py  recorded_data_args  script1.py  test.csv  unpacked_demo3.txt
DataGenerator/: Car.js  README.md  Server.js  carServer.js  package-lock.json  package.json
src/: App.js
(+122 files in other folders)
